# json_benchmark

./: .gitignore  README.md  generate_benchmark_summaries.py  generate_minefield_reports.py  pyproject.toml  requirements.txt
minefield_reports/: README.md  msgspec.md  orjson.md  rapidjson.md  simdjson.md  ujson.md  yyjson.md
tests/: conftest.py  test_cysimdjson.py  test_json.py  test_json_merge_patch.py  test_msgspec.py  test_orjson.py  test_rapidjson.py  test_simdjson.py  test_ujson.py  test_yyjson.py
